# Mathematics

./: CMakeLists.txt  README.md
include/f6/: CMakeLists.txt  constant.hpp  mathematics.hpp  mathematics.inl
include/f6/typedef/: numerics.hpp
test/: CMakeLists.txt  main.cpp
